--- a/frontend/tailwindsetup.css
+++ b/frontend/tailwindsetup.css
@@ -118,6 +118,22 @@
     --color-highlightbg: rgba(0, 0, 0, 0.08);
     --color-accent: #0071e3;
     --color-accenthover: #2997ff;
+    --ansi-black: #24292f;
+    --ansi-red: #cf222e;
+    --ansi-green: #116329;
+    --ansi-yellow: #4d2d00;
+    --ansi-blue: #0969da;
+    --ansi-magenta: #8250df;
+    --ansi-cyan: #1b7c83;
+    --ansi-white: #6e7781;
+    --ansi-brightblack: #57606a;
+    --ansi-brightred: #a40e26;
+    --ansi-brightgreen: #1a7f37;
+    --ansi-brightyellow: #9a6700;
+    --ansi-brightblue: #0550ae;
+    --ansi-brightmagenta: #6639ba;
+    --ansi-brightcyan: #1b7c83;
+    --ansi-brightwhite: #24292f;
 }
 
 /* Chart tooltip styling for sysinfo plots */
